views/mus: Use the GpuMemoryBufferManager from GpuService.

Instead of creating a new MojoGpuMemoryBufferManager in SurfaceContextFactory,
use the one created by ui::GpuService.

BUG=637920

Review-Url: https://codereview.chromium.org/2247123002
Cr-Commit-Position: refs/heads/master@{#412155}

Former-commit-id: 1728c325de3deb076ca236e29e9295147e2b2737